force-app/main/default/objects/Drug_Batch__c/Drug_Batch__c.object-meta.xml
<CustomObject>
    <label>Drug Batch</label>
    <nameField>
        <displayFormat>DB-{0000}</displayFormat>
        <label>Drug Batch</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Drug Batches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>