force-app/main/default/objects/Drug_Batch__c/fields/Batch_Cost__c.field-meta.xml
<CustomField>
    <fullName>Batch_Cost__c</fullName>
    <label>Batch Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>