force-app/main/default/objects/Drug_Batch__c/fields/Drug__c.field-meta.xml
<CustomField>
    <fullName>Drug__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Drug</label>
    <referenceTo>Drug__c</referenceTo>
    <relationshipLabel>Drug Batches</relationshipLabel>
    <relationshipName>DR</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>