force-app/main/default/objects/Drug_Batch__c/fields/FDA_Approved__c.field-meta.xml
<CustomField>
    <fullName>FDA_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FDA Approved</label>
    <type>Checkbox</type>
</CustomField>