force-app/main/default/objects/Drug_Batch__c/fields/Lot_Number__c.field-meta.xml
<CustomField>
    <fullName>Lot_Number__c</fullName>
    <inlineHelpText>Please enter the 5 digit LOT Number for this Drug Batch.</inlineHelpText>
    <label>Lot Number</label>
    <precision>5</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>