force-app/main/default/objects/Drug_Batch__c/fields/Manufacture_Date__c.field-meta.xml
<CustomField>
    <fullName>Manufacture_Date__c</fullName>
    <label>Manufacture Date</label>
    <type>Date</type>
</CustomField>