force-app/main/default/objects/Drug_Batch__c/fields/Recall_Reason__c.field-meta.xml
<CustomField>
    <fullName>Recall_Reason__c</fullName>
    <label>Recall Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Contamination</fullName>
            </value>
            <value>
                <fullName>Manufacturing Defect</fullName>
            </value>
            <value>
                <fullName>Labeling Error</fullName>
            </value>
            <value>
                <fullName>Regulatory Action</fullName>
            </value>
            <value>
                <fullName>Supplier Issue</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>