force-app/main/default/objects/Drug_Batch__c/fields/Status_Last_Updated_Date__c.field-meta.xml
<CustomField>
    <fullName>Status_Last_Updated_Date__c</fullName>
    <label>Status Last Updated Date</label>
    <type>Date</type>
</CustomField>