force-app/main/default/objects/Drug_Batch__c/fields/Supplier_Status__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Status__c</fullName>
    <label>Supplier Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>