force-app/main/default/objects/Drug_Batch__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Name__c</columns>
    <columns>Lot_Number__c</columns>
    <columns>Manufacture_Date__c</columns>
    <columns>Expiry_Date__c</columns>
    <columns>FDA_Approved__c</columns>
    <columns>Recall_Reason__c</columns>
    <columns>Supplier_Name__c</columns>
    <columns>Supplier_Email__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>